core/tests/de/unisb/cs/depend/ccs_sem/junit/integrationtests/invalid/OperatorArgumentType7.java
package de.unisb.cs.depend.ccs_sem.junit.integrationtests.invalid;


import de.unisb.cs.depend.ccs_sem.junit.FailingIntegrationTest;


public class OperatorArgumentType7 extends FailingIntegrationTest {

    @Override
    protected String getExpressionString() {
        return "a!(false << 2)";
    }

    @Override
    protected int getExpectedParsingErrors() {
        return 1;
    }

    @Override
    protected boolean expectParsedProgram() {
        return false;
    }

}
